--- a/assets/styles/layout/_layout.scss
+++ b/assets/styles/layout/_layout.scss
@@ -43,6 +43,7 @@ body {
     grid-area: main;
     padding: 0 .5rem;
     position: relative;
+    overflow: hidden;
   }
 
   #sidebar {
